2010-09-10  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Fix "mingw-get deletes itself" bug in last rites handling.

	* README: Add new release notes.

	* configure.ac: Bump version to 0.1-alpha-4.

	* src/dmh.h: If __cplusplus, include <exception> and
	declare dmh_exception class.

	* src/dmh.cpp (class dmh_exception): Implement.
	(abort_if_fatal): If DMH_FATAL, throw dmh_exception rather
	than calling exit().

	* src/climain.cpp (climain): Wrap entry function body in try/
	catch block. If dmh_exception is caught, return EXIT_FAILURE.

	* src/clistub.c (main): Capture return value of climain(). If
	non-zero, perform last rites and return EXIT_FAILURE.

2010-08-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.1-mingw32-alpha-3 released.

	* README: Add new release notes.

	* All files (r0-1-alpha-3): Tag assigned.

2010-08-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add runtime hooks to support self-upgrade for future releases.

	* src/rites.c: New file; compile it free-standing, to provide...
	(lastrites.exe): ...this helper application for context clean-up;
	alternatively, use it as an include file, with pre-definition of...
	(IMPLEMENT_INITIATION_RITES): ...this, to implement...
	(pkgInitRites, pkgLastRites): ...these inline functions.

	* src/clistub.c (main) [argc > 1]: Use them.
	(progname): New local variable within `main'; set it once, then use it
	instead of repeated references to `basename(*argv)' in diagnostics.
	(MINGW_GET_DLL, MINGW_GET_GUI): Relocate to `src/rites.c'.

	* src/debug.h (DEBUG_INHIBIT_RITES_OF_PASSAGE):
	(DEBUG_FAIL_FILE_RENAME_RITE, DEBUG_FAIL_FILE_UNLINK_RITE): New
	defines; they facilitate debugging of the src/rites.c code.

	* Makefile.in (lastrites$EXEEXT): New target; build as prerequisite...
	(all): ...of this primary target.
	(install, install-strip): Install it.
	(SRCDIST_FILES): Remove install-sh; it is now included in...
	(build-aux): ...this directory; add it to...